新增生活陶內容頁

--- a/index.html
+++ b/index.html
@@ -138,30 +138,30 @@
       <section class="track">
         <div class="camera">
           <div class="frame">
-            <a href="./class-temp.html" class="item item-1">
+            <a href="./class-temp.html" class="item">
               <p>學習以土球、土條、土板三大類基礎做陶技法，<br>
                 製作日常中會使用到的物品。</p>
               <img src="./assets/class_01.png" alt="">
               <h5>手捏器皿</h5>
             </a>
-            <a href="" class="item item-2">
+            <a href="" class="item">
               <p>學習從掌上型小陶偶，
                 到中型陶偶挖空或土條製作技法，配合化妝土上色。</p>
               <img src="./assets/class_02.png" alt="">
               <h5>陶偶雕塑</h5>
             </a>
-            <a href="" class="item item-3">
+            <a href="" class="item">
               <p>學習以轆轤製作杯、碗、盤形，技巧較高，表面質感較為圓滑平整。</p>
               <img src="./assets/class_03.png" alt="">
               <h5>基礎拉胚</h5>
             </a>
-            <a href="" class="item item-4">
+            <a href="" class="item">
               <p>學習從掌上型小陶偶，
                 到中型陶偶挖空或土條製作技法，配合化妝土上色。</p>
               <img src="./assets/class_04.png" alt="">
               <h5>進階創作</h5>
             </a>
-            <a href="" class="item item-5">
+            <a href="" class="item">
               <p>學習從掌上型小陶偶，
                 到中型陶偶挖空或土條製作技法，配合化妝土上色。</p>
               <img src="./assets/class_05代換.png" alt="">
