--- a/arts.html
+++ b/arts.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh-Hang">
+<html lang="zh-Hant-TW">
 
 <head>
   <meta charset="UTF-8">
@@ -44,10 +44,10 @@
           </ul>
         </div>
         <!-- menu-btn -->
-        <button class="navbar-toggler" type="button">
+        <a href="./menu.html" class="navbar-toggler">
           <div class="line-1"></div>
           <div class="line-2"></div>
-        </button>
+        </a>
       </div>
     </nav>
   </header>
@@ -166,7 +166,7 @@
   <!-- FOOTER -->
 
   <script src="./js/follow-cursor.js"></script>
-  <script src="./js/line-scroll.js"></script>
+  <script src="./js/text-hrscroll.js"></script>
 </body>
 
 </html>
