--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh-Hang">
+<html lang="zh-Hant-TW">
 
 <head>
   <meta charset="UTF-8">
@@ -44,10 +44,10 @@
           </ul>
         </div>
         <!-- menu-btn -->
-        <button class="navbar-toggler" type="button">
+        <a href="./menu.html" class="navbar-toggler">
           <div class="line-1"></div>
           <div class="line-2"></div>
-        </button>
+        </a>
       </div>
     </nav>
   </header>
