--- a/work-temp.html
+++ b/work-temp.html
@@ -12,7 +12,7 @@
     rel="stylesheet">
   <title>生活陶｜又煦陶作</title>
   <!-- <link rel="stylesheet" href="./css/normalize.css"> -->
-  <link rel="stylesheet" href="./css/common.css">
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 
 <body onload="followMouse();">
