--- a/contact.html
+++ b/contact.html
@@ -169,7 +169,7 @@
     <span class="copyright-footer">本網站為緯育TibaMe前端工程師專業技術養成班第72期學員專題作品，本平台僅供學習、展示之用。</span>
   </footer>
   <!-- FOOTER -->
-
+  <script src="./js/main.js"></script>
   <script src="./js/follow-cursor.js"></script>
 </body>
 
