--- a/index.html
+++ b/index.html
@@ -231,7 +231,8 @@
         <p>生活器皿販售 / 陶藝課程教學</p>
       </div>
     </div>
-    <span class="copyright-footer">本網站為緯育TibaMe前端工程師專業技術養成班第72期學員專題作品，本平台僅供學習、展示之用。</span>
+    <span class="copyright-footer">本網站為緯育TibaMe前端工程師專業技術養成班第72期學員專題作品，本平台僅供學習、展示之用。 參考網站:</span>
+    <a class="roboto caption" href="http://www.sakuzan.co.jp/product/urban.html">SAKUZAN URBAN</a>
   </footer>
   <!-- FOOTER -->
 
