--- a/classes.html
+++ b/classes.html
@@ -30,16 +30,18 @@
         <div class="navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="navlink" href="arts.html">藝術陶</a>
+              <a class="navlink" href="arts.html">藝術陶<div class="underline"></div></a>
             </li>
             <li class="nav-item">
-              <a class="navlink" href="works.html">生活陶</a>
+              <a class="navlink" href="works.html">生活陶
+                <div class="underline"></div>
+              </a>
             </li>
             <li class="nav-item">
-              <a class="navlink" href="classes.html">課程教學</a>
+              <a class="navlink active" href="classes.html">課程教學<div class="underline"></div></a>
             </li>
             <li class="nav-item">
-              <a class="navlink" href="contact.html">聯絡我們</a>
+              <a class="navlink" href="contact.html">聯絡我們<div class="underline"></div></a>
             </li>
           </ul>
         </div>
