--- a/contact.html
+++ b/contact.html
@@ -30,16 +30,18 @@
         <div class="navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="navlink" href="arts.html">藝術陶</a>
+              <a class="navlink" href="arts.html">藝術陶<div class="underline"></div></a>
             </li>
             <li class="nav-item">
-              <a class="navlink" href="works.html">生活陶</a>
+              <a class="navlink" href="works.html">生活陶
+                <div class="underline"></div>
+              </a>
             </li>
             <li class="nav-item">
-              <a class="navlink" href="class.html">課程教學</a>
+              <a class="navlink" href="classes.html">課程教學<div class="underline"></div></a>
             </li>
             <li class="nav-item">
-              <a class="navlink" href="contact.html">聯絡我們</a>
+              <a class="navlink active" href="contact.html">聯絡我們<div class="underline"></div></a>
             </li>
           </ul>
         </div>
@@ -117,9 +119,9 @@
             </div>
             <div class="form-row">
               <div class="form-column">
-                <div class="input-textarea">
+                <div class="input-string">
                   <textarea id="message" name="message" type="textarea" placeholder=" " autocomplete="on" cols="30"
-                    rows="4" minlength="10" maxlength="500" spellcheck="false" class="input-textarea-input"></textarea>
+                    rows="4" minlength="10" maxlength="500" spellcheck="false" class="input-textarea"></textarea>
                   <label aria-label="Name" class="input-label">訊息</label>
                 </div>
               </div>
