--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&family=Noto+Serif+Display:ital,wght@1,300&family=Noto+Serif+JP:wght@300;400&family=Roboto:wght@300&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="./css/main.css">
+  <link rel="stylesheet" href="url-to-cdn/splide.min.css">
   <title>又煦陶作</title>
 </head>
 
@@ -30,16 +31,18 @@
         <div class="navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="navlink" href="arts.html">藝術陶</a>
+              <a class="navlink" href="arts.html">藝術陶<div class="underline"></div></a>
             </li>
             <li class="nav-item">
-              <a class="navlink" href="works.html">生活陶</a>
+              <a class="navlink" href="works.html">生活陶
+                <div class="underline"></div>
+              </a>
             </li>
             <li class="nav-item">
-              <a class="navlink" href="classes.html">課程教學</a>
+              <a class="navlink" href="classes.html">課程教學<div class="underline"></div></a>
             </li>
             <li class="nav-item">
-              <a class="navlink" href="contact.html">聯絡我們</a>
+              <a class="navlink" href="contact.html">聯絡我們<div class="underline"></div></a>
             </li>
           </ul>
         </div>
@@ -239,6 +242,7 @@
   <script src="./js/follow-cursor.js"></script>
   <script src="./js/horizonal-plugin.js"></script>
   <script src="./js/hr-scroll.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@3.1.9/dist/js/splide.cjs.min.js"></script>
 </body>
 
 </html>
