--- a/works.html
+++ b/works.html
@@ -34,16 +34,18 @@
         <div class="navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="navlink" href="arts.html">藝術陶</a>
+              <a class="navlink" href="arts.html">藝術陶<div class="underline"></div></a>
             </li>
             <li class="nav-item">
-              <a class="navlink" href="works.html">生活陶</a>
+              <a class="navlink active" href="works.html">生活陶
+                <div class="underline"></div>
+              </a>
             </li>
             <li class="nav-item">
-              <a class="navlink" href="classes.html">課程教學</a>
+              <a class="navlink" href="classes.html">課程教學<div class="underline"></div></a>
             </li>
             <li class="nav-item">
-              <a class="navlink" href="contact.html">聯絡我們</a>
+              <a class="navlink" href="contact.html">聯絡我們<div class="underline"></div></a>
             </li>
           </ul>
         </div>
@@ -84,7 +86,15 @@
           <p class="price-text">NT$500</p>
         </a>
         <a class="works-card w-30">
-          <img src="./assets/works_01.png" alt="">
+          <img src="./assets/works_02.png" alt="">
+          <div>
+            <span class="align-left">作品名稱</span>
+            <span href="" class="tag caption btn-secondary">18cm</span>
+          </div>
+          <p class="price-text">NT$500</p>
+        </a>
+        <a class="works-card w-30">
+          <img src="./assets/works_03.png" alt="">
           <div>
             <span class="align-left">作品名稱</span>
             <span href="" class="tag caption btn-secondary">18cm</span>
@@ -100,7 +110,7 @@
           <p class="price-text">NT$500</p>
         </a>
         <a class="works-card w-30">
-          <img src="./assets/works_01.png" alt="">
+          <img src="./assets/works_02.png" alt="">
           <div>
             <span class="align-left">作品名稱</span>
             <span href="" class="tag caption btn-secondary">18cm</span>
@@ -108,15 +118,7 @@
           <p class="price-text">NT$500</p>
         </a>
         <a class="works-card w-30">
-          <img src="./assets/works_01.png" alt="">
-          <div>
-            <span class="align-left">作品名稱</span>
-            <span href="" class="tag caption btn-secondary">18cm</span>
-          </div>
-          <p class="price-text">NT$500</p>
-        </a>
-        <a class="works-card w-30">
-          <img src="./assets/works_01.png" alt="">
+          <img src="./assets/works_03.png" alt="">
           <div>
             <span class="align-left">作品名稱</span>
             <span href="" class="tag caption btn-secondary">18cm</span>
