--- a/index.html
+++ b/index.html
@@ -64,7 +64,27 @@
     <!-- landing section -->
     <section class="hero-section">
       <div class="w-35">
-        <slider><img src="./assets/slider_01.jpg" alt=""></slider>
+        <div class="slider-wrapper">
+          <div class="slider-img">
+            <img src="./assets/slider_01.jpg" alt="">
+          </div>
+          <div class="slider-control-wrap">
+            <div class="arrow-wrap">
+              <div class="arrowbox focus">
+                <img src="./assets/arrow-left.svg" alt="">
+              </div>
+              <div class="arrowbox">
+                <img src="./assets/arrow-right.svg" alt="">
+              </div>
+            </div>
+            <div class="slider-number">
+              <span class="roboto number">01</span>
+              <span class="roboto number active">02</span>
+              <span class="roboto number">03</span>
+              <span class="roboto number">04</span>
+            </div>
+          </div>
+        </div>
       </div>
       <div class="w-65">
         <video autoplay muted loop id="brand-video" class="brand-video">
