--- a/arts.html
+++ b/arts.html
@@ -169,7 +169,7 @@
   <!-- FOOTER -->
 
   <script src="./js/follow-cursor.js"></script>
-  <script src="./js/text-hrscroll.js"></script>
+  <script src="./js/text-hr-scroll.js"></script>
 </body>
 
 </html>
