--- a/menu.html
+++ b/menu.html
@@ -30,23 +30,23 @@
         <a href="./classes.html" class="menulink">課程教學</a>
         <a href="./contact.html" class="menulink">聯絡我們</a>
       </div>
-      <div class="menu-contact-wrap">
-        <h6 class="item-1">聯絡我們</h6>
-        <div class="menu-info-wrap">
-          <p class="item-2 label">〒950 台東縣台東市杭州街118號1樓</p>
-          <p class="item-3 label">(+886) 921-271-867</p>
+      <div class="menu-bottom-wrap">
+        <h6 class="menu-bottom-title">聯絡我們</h6>
+        <div class="menu-bottom-box1">
+          <p class="label">〒950 台東縣台東市杭州街118號1樓</p>
+          <p class="label">(+886) 921-271-867</p>
         </div>
-        <div class="menu-sns-wrap">
-          <a href="https://www.instagram.com/yoshipottery/" target=_blank class="item-4"> <img
+        <div class="menu-bottom-box2">
+          <a href="https://www.instagram.com/yoshipottery/" target=_blank> <img
               src="./assets/instagram-02.svg" alt=""></a>
-          <a href="https://www.facebook.com/yoshipottery" target=_blank class="item-5"> <img
+          <a href="https://www.facebook.com/yoshipottery" target=_blank> <img
               src="./assets/facebook-02.svg" alt=""></a>
         </div>
-        <div class="menu-btn-wrap">
-          <a href="./contact.html" class="item-6 btn btn-secondary-outline">報名課程</a>
-          <a href="./contact.html" class="item-7 btn btn-secondary-outline">陶器訂製</a>
+        <div class="menu-bottom-box3">
+          <a href="./contact.html" class="btn btn-secondary-outline">報名課程</a>
+          <a href="./contact.html" class="btn btn-secondary-outline">陶器訂製</a>
         </div>
-        <p class="item-8 label w-100">© YOSHIPOTTERY ALL RIGHTS RESERVED.</p>
+        <p class="menu-copyright label">© YOSHIPOTTERY ALL RIGHTS RESERVED.</p>
       </div>
     </div>
   </div>
