--- a/class-temp.html
+++ b/class-temp.html
@@ -15,12 +15,14 @@
 </head>
 
 <body onload="followMouse();">
-  <!-- Follow Cursor -->
+  <!-- =========== Cursor =========== -->
   <div class="cursor-wrap">
-    <div class="cursor" id="ball"></div>
+    <div class="outer1" id="ball">
+      <div class="outer2"></div>
+    </div>
   </div>
-  <!-- Follow Cursor -->
-  <!-- NAVBAR -->
+  <!-- =========== Cursor =========== -->
+  <!-- =========== NAVBR =========== -->
   <header>
     <nav class="navbar">
       <div class="container-navbar">
@@ -53,7 +55,7 @@
       </div>
     </nav>
   </header>
-  <!-- NAVBAR -->
+  <!-- =========== NAVBR =========== -->
   <!-- CONTAINER -->
   <main>
     <div class="left-fixed">
@@ -148,7 +150,7 @@
   </footer>
   <!-- FOOTER -->
 
-  <script src="./js/follow-cursor.js"></script>
+  <script src="./js/cursor.js"></script>
 </body>
 
 </html>
