--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
 
 <body onload="followMouse();">
   <!-- =========== Cursor =========== -->
-  <div class="cursor"></div>
   <div class="cursor-wrap">
     <div class="outer1" id="ball">
       <div class="outer2"></div>
@@ -265,9 +264,8 @@
   <!-- FOOTER -->
 
   <script src="./js/cursor.js"></script>
-  <script src="./js/horizonal-plugin.js"></script>
   <script src="./js/hr-scroll.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@3.1.9/dist/js/splide.cjs.min.js"></script>
+  <!-- <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@3.1.9/dist/js/splide.cjs.min.js"></script> -->
 </body>
 
 </html>
