--- a/arts.html
+++ b/arts.html
@@ -1,164 +1,146 @@
 <!DOCTYPE html>
 <html lang="zh-Hant-TW">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&family=Noto+Serif+Display:ital,wght@1,300&family=Noto+Serif+JP:wght@300;400&family=Roboto:wght@300&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="./css/main.css" />
-    <title>藝術陶｜又煦陶作</title>
-  </head>
 
-  <body>
-    <!-- NAVBAR -->
-    <header>
-      <nav class="navbar">
-        <div class="container-navbar">
-          <!-- brand -->
-          <a class="navbar-brand" href="index.html"
-            ><img src="./assets/logo1.svg" alt=""
-          /></a>
-          <!-- Navlink-list -->
-          <div class="navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="navlink active" href="arts.html"
-                  >藝術陶
-                  <div class="underline"></div
-                ></a>
-              </li>
-              <li class="nav-item">
-                <a class="navlink" href="works.html"
-                  >生活陶
-                  <div class="underline"></div>
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="navlink" href="classes.html"
-                  >課程教學
-                  <div class="underline"></div
-                ></a>
-              </li>
-              <li class="nav-item">
-                <a class="navlink" href="contact.html"
-                  >聯絡我們
-                  <div class="underline"></div
-                ></a>
-              </li>
-            </ul>
-          </div>
-          <!-- menu-btn -->
-          <a href="./menu.html" class="navbar-toggler">
-            <div class="line-1"></div>
-            <div class="line-2"></div>
-          </a>
-        </div>
-      </nav>
-    </header>
-    <!-- NAVBAR -->
-    <main>
-      <div class="left-fixed">
-        <p class="copyright roboto">© YOSHIPOTTERY ALL RIGHTS RESERVED.</p>
-      </div>
-      <h2 class="display-title">Art Pottery</h2>
-      <h3 class="art-title">藝術陶</h3>
-      <!-- arts-card -->
-      <div class="art-wrap">
-        <a class="w-30 px-24 arts-card arts-card-1" href="">
-          <div class="thumbnail">
-            <img src="./assets/arts_01.png" />
-          </div>
-          <p class="align-center">作品名稱</p>
-        </a>
-        <a class="w-40 px-24 arts-card arts-card-2" href="">
-          <div class="thumbnail">
-            <img src="./assets/arts_02.png" />
-          </div>
-          <p class="align-center">作品名稱</p>
-        </a>
-        <a class="w-30 px-24 arts-card arts-card-3" href="">
-          <div class="thumbnail">
-            <img src="./assets/arts_03.png" />
-          </div>
-          <p class="align-center">作品名稱</p>
-        </a>
-        <a class="w-30 px-24 arts-card arts-card-4" href="">
-          <div class="thumbnail">
-            <img src="./assets/arts_04.png" />
-          </div>
-          <p class="align-center">作品名稱</p>
-        </a>
-        <a class="w-40 px-24 arts-card arts-card-5" href="">
-          <div class="thumbnail">
-            <img src="./assets/arts_05.png" />
-          </div>
-          <p class="align-center">作品名稱</p>
-        </a>
-        <a class="w-30 px-24 arts-card arts-card-6" href="">
-          <div class="thumbnail">
-            <img src="./assets/arts_06.png" />
-          </div>
-          <p class="align-center">作品名稱</p>
-        </a>
-      </div>
-      <!-- arts-card -->
-    </main>
-    <!-- CONTAINER -->
-    <!-- FOOTER -->
-    <footer class="footer">
-      <div class="container-footer">
-        <!-- sitemap -->
-        <div class="sitemap">
-          <a href="arts.html">藝術陶</a>
-          <a href="works.html">生活陶</a>
-          <a href="class.html">課程教學</a>
-          <a href="contact.html">聯絡我們</a>
-        </div>
-        <!-- info -->
-        <div class="info-box">
-          <a class="label" href="">950<br />台東縣台東市杭州街118號1樓</a>
-          <a class="roboto" href="">(+886) 921-271-867</a>
-          <a class="roboto" href="">yoshipottery@gmail.com</a>
-        </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&family=Noto+Serif+Display:ital,wght@1,300&family=Noto+Serif+JP:wght@300;400&family=Roboto:wght@300&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="./css/main.css" />
+  <title>藝術陶｜又煦陶作</title>
+</head>
+
+<body onload="followMouse();">
+  <!-- =========== Cursor =========== -->
+  <div class="cursor-wrap">
+    <div class="outer1" id="ball">
+      <div class="outer2"></div>
+    </div>
+  </div>
+  <!-- =========== Cursor =========== -->
+  <!-- =========== NAVBR =========== -->
+  <header>
+    <nav class="navbar">
+      <div class="container-navbar">
         <!-- brand -->
-        <div class="brandbox dark-color">
-          <div class="follow-box">
-            <a
-              href="https://www.instagram.com/yoshipottery/"
-              target="_blank"
-              class="ig"
-              ><img src="./assets/instagram.svg" alt=""
-            /></a>
-            <span class="label">/</span>
-            <a
-              ref="https://www.facebook.com/yoshipottery"
-              target="_blank"
-              class="fb"
-              ><img src="./assets/facebook.svg" alt=""
-            /></a>
-          </div>
-          <h4>yoshi pottery</h4>
-          <p>生活器皿販售 / 陶藝課程教學</p>
+        <a class="navbar-brand" href="index.html"><img src="./assets/logo1.svg" alt=""></a>
+        <!-- Navlink-list -->
+        <div class="navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="navlink" href="arts.html">藝術陶<div class="underline"></div></a>
+            </li>
+            <li class="nav-item">
+              <a class="navlink" href="works.html">生活陶
+                <div class="underline"></div>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="navlink" href="classes.html">課程教學<div class="underline"></div></a>
+            </li>
+            <li class="nav-item">
+              <a class="navlink" href="contact.html">聯絡我們<div class="underline"></div></a>
+            </li>
+          </ul>
         </div>
+        <!-- menu-btn -->
+        <a href="./menu.html" class="navbar-toggler">
+          <div class="line-1"></div>
+          <div class="line-2"></div>
+        </a>
       </div>
-      <span class="copyright-footer"
-        >本網站為緯育TibaMe前端工程師專業技術養成班第72期學員專題作品，本平台僅供學習、展示之用。
-        參考網站:</span
-      >
-      <a
-        class="roboto caption"
-        href="http://www.sakuzan.co.jp/product/urban.html"
-        >SAKUZAN URBAN</a
-      >
-    </footer>
-    <!-- FOOTER -->
+    </nav>
+  </header>
+  <!-- =========== NAVBR =========== -->
+  <main>
+    <div class="left-fixed">
+      <p class="copyright roboto">© YOSHIPOTTERY ALL RIGHTS RESERVED.</p>
+    </div>
+    <h2 class="display-title">Art Pottery</h2>
+    <h3 class="art-title">藝術陶</h3>
+    <!-- arts-card -->
+    <div class="art-wrap">
+      <a class="w-30 px-24 arts-card arts-card-1" href="">
+        <div class="thumbnail">
+          <img src="./assets/arts_01.png" />
+        </div>
+        <p class="align-center">作品名稱</p>
+      </a>
+      <a class="w-40 px-24 arts-card arts-card-2" href="">
+        <div class="thumbnail">
+          <img src="./assets/arts_02.png" />
+        </div>
+        <p class="align-center">作品名稱</p>
+      </a>
+      <a class="w-30 px-24 arts-card arts-card-3" href="">
+        <div class="thumbnail">
+          <img src="./assets/arts_03.png" />
+        </div>
+        <p class="align-center">作品名稱</p>
+      </a>
+      <a class="w-30 px-24 arts-card arts-card-4" href="">
+        <div class="thumbnail">
+          <img src="./assets/arts_04.png" />
+        </div>
+        <p class="align-center">作品名稱</p>
+      </a>
+      <a class="w-40 px-24 arts-card arts-card-5" href="">
+        <div class="thumbnail">
+          <img src="./assets/arts_05.png" />
+        </div>
+        <p class="align-center">作品名稱</p>
+      </a>
+      <a class="w-30 px-24 arts-card arts-card-6" href="">
+        <div class="thumbnail">
+          <img src="./assets/arts_06.png" />
+        </div>
+        <p class="align-center">作品名稱</p>
+      </a>
+    </div>
+    <!-- arts-card -->
+  </main>
+  <!-- CONTAINER -->
+  <!-- FOOTER -->
+  <footer class="footer">
+    <div class="container-footer">
+      <!-- sitemap -->
+      <div class="sitemap">
+        <a href="arts.html">藝術陶</a>
+        <a href="works.html">生活陶</a>
+        <a href="class.html">課程教學</a>
+        <a href="contact.html">聯絡我們</a>
+      </div>
+      <!-- info -->
+      <div class="info-box">
+        <a class="label" href="">950<br />台東縣台東市杭州街118號1樓</a>
+        <a class="roboto" href="">(+886) 921-271-867</a>
+        <a class="roboto" href="">yoshipottery@gmail.com</a>
+      </div>
+      <!-- brand -->
+      <div class="brandbox dark-color">
+        <div class="follow-box">
+          <a href="https://www.instagram.com/yoshipottery/" target="_blank" class="ig"><img src="./assets/instagram.svg"
+              alt="" /></a>
+          <span class="label">/</span>
+          <a ref="https://www.facebook.com/yoshipottery" target="_blank" class="fb"><img src="./assets/facebook.svg"
+              alt="" /></a>
+        </div>
+        <h4>yoshi pottery</h4>
+        <p>生活器皿販售 / 陶藝課程教學</p>
+      </div>
+    </div>
+    <span class="copyright-footer">本網站為緯育TibaMe前端工程師專業技術養成班第72期學員專題作品，本平台僅供學習、展示之用。
+      參考網站:</span>
+    <a class="roboto caption" href="http://www.sakuzan.co.jp/product/urban.html">SAKUZAN URBAN</a>
+  </footer>
+  <!-- FOOTER -->
 
-    <!-- <script src="./js/follow-cursor.js"></script> -->
-    <script src="./js/text-hr-scroll.js"></script>
-  </body>
+  <script src="./js/cursor.js"></script>
+  <script src="./js/text-hr-scroll.js"></script>
+</body>
+
 </html>
