--- a/contact.html
+++ b/contact.html
@@ -15,12 +15,14 @@
 </head>
 
 <body onload="followMouse();">
-  <!-- Follow Cursor -->
+  <!-- =========== Cursor =========== -->
   <div class="cursor-wrap">
-    <div class="cursor" id="ball"></div>
+    <div class="outer1" id="ball">
+      <div class="outer2"></div>
+    </div>
   </div>
-  <!-- Follow Cursor -->
-  <!-- NAVBAR -->
+  <!-- =========== Cursor =========== -->
+  <!-- =========== NAVBR =========== -->
   <header>
     <nav class="navbar">
       <div class="container-navbar">
@@ -41,7 +43,7 @@
               <a class="navlink" href="classes.html">課程教學<div class="underline"></div></a>
             </li>
             <li class="nav-item">
-              <a class="navlink active" href="contact.html">聯絡我們<div class="underline"></div></a>
+              <a class="navlink" href="contact.html">聯絡我們<div class="underline"></div></a>
             </li>
           </ul>
         </div>
@@ -53,7 +55,7 @@
       </div>
     </nav>
   </header>
-  <!-- NAVBAR -->
+  <!-- =========== NAVBR =========== -->
   <!-- CONTAINER -->
   <main>
     <div class="left-fixed">
@@ -172,8 +174,7 @@
     <a class="roboto caption" href="http://www.sakuzan.co.jp/product/urban.html">SAKUZAN URBAN</a>
   </footer>
   <!-- FOOTER -->
-  <script src="./js/main.js"></script>
-  <script src="./js/follow-cursor.js"></script>
+  <script src="./js/cursor.js"></script>
 </body>
 
 </html>
