--- a/work-temp.html
+++ b/work-temp.html
@@ -16,12 +16,14 @@
 </head>
 
 <body onload="followMouse();">
-  <!-- Follow Cursor -->
+  <!-- =========== Cursor =========== -->
   <div class="cursor-wrap">
-    <div class="cursor" id="ball"></div>
+    <div class="outer1" id="ball">
+      <div class="outer2"></div>
+    </div>
   </div>
-  <!-- Follow Cursor -->
-  <!-- NAVBAR -->
+  <!-- =========== Cursor =========== -->
+  <!-- =========== NAVBR =========== -->
   <header>
     <nav class="navbar">
       <div class="container-navbar">
@@ -54,7 +56,7 @@
       </div>
     </nav>
   </header>
-  <!-- NAVBAR -->
+  <!-- =========== NAVBR =========== -->
 
   <!-- CONTAINER -->
   <main>
@@ -167,7 +169,8 @@
   </footer>
   <!-- FOOTER -->
 
-  <script src="./js/follow-cursor.js"></script>
+  <script src="./js/cursor.js"></script>
+  //數字增減
   <script>
     function increaseValue() {
       var value = parseInt(document.getElementById('number').value, 10);
