--- a/_guideline.html
+++ b/_guideline.html
@@ -16,12 +16,13 @@
 </head>
 
 <body>
-  <!-- Follow Cursor -->
-  <div class="cursor"></div>
+  <!-- =========== Cursor =========== -->
   <div class="cursor-wrap">
-    <div id="ball"></div>
+    <div class="cursor"></div>
+    <div class="ball" id="ball">
+    </div>
   </div>
-  <!-- Follow Cursor -->
+  <!-- =========== Cursor =========== -->
   <!-- NAVBAR -->
   <header>
     <nav class="navbar">
