--- a/contact.html
+++ b/contact.html
@@ -17,8 +17,8 @@
 <body onload="followMouse();">
   <!-- =========== Cursor =========== -->
   <div class="cursor-wrap">
-    <div class="outer1" id="ball">
-      <div class="outer2"></div>
+    <div class="cursor"></div>
+    <div class="ball" id="ball">
     </div>
   </div>
   <!-- =========== Cursor =========== -->
@@ -174,7 +174,21 @@
     <a class="roboto caption" href="http://www.sakuzan.co.jp/product/urban.html">SAKUZAN URBAN</a>
   </footer>
   <!-- FOOTER -->
+  <script src="./js/main.js"></script>
   <script src="./js/cursor.js"></script>
 </body>
 
 </html>
+
+<!-- // const array = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10];
+// //印出上面的陣列，這個陣列的每個值，如果不被2整除就 執行console.log()
+
+// for (let i = 0; i < array.length; i++) {
+//   const number = array[i];
+//   //console.log(number)
+//   if (number % 2 == 1) {
+//     console.log(array[i])
+//   } else {
+//     console.log('我是偶數')
+//   }
+// } -->
