--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 <body onload="followMouse();">
   <!-- =========== Cursor =========== -->
   <div class="cursor-wrap">
-    <div class="outer1" id="ball">
-      <div class="outer2"></div>
+    <div class="cursor"></div>
+    <div class="ball" id="ball">
     </div>
   </div>
   <!-- =========== Cursor =========== -->
@@ -264,7 +264,6 @@
   <!-- FOOTER -->
 
   <script src="./js/cursor.js"></script>
-  <script src="./js/hr-scroll.js"></script>
   <!-- <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@3.1.9/dist/js/splide.cjs.min.js"></script> -->
 </body>
 
