--- a/menu.html
+++ b/menu.html
@@ -14,12 +14,7 @@
   <title>menu</title>
 </head>
 
-<body onload="followMouse();">
-  <!-- Follow Cursor -->
-  <div class="cursor-wrap">
-    <div class="cursor" id="ball"></div>
-  </div>
-  <!-- Follow Cursor -->
+<body>
   <div class="menu-section">
     <div class="menubg w-35"></div>
     <div class="menu-content">
@@ -37,10 +32,9 @@
           <p class="label">(+886) 921-271-867</p>
         </div>
         <div class="menu-bottom-box2">
-          <a href="https://www.instagram.com/yoshipottery/" target=_blank> <img
-              src="./assets/instagram-02.svg" alt=""></a>
-          <a href="https://www.facebook.com/yoshipottery" target=_blank> <img
-              src="./assets/facebook-02.svg" alt=""></a>
+          <a href="https://www.instagram.com/yoshipottery/" target=_blank> <img src="./assets/instagram-02.svg"
+              alt=""></a>
+          <a href="https://www.facebook.com/yoshipottery" target=_blank> <img src="./assets/facebook-02.svg" alt=""></a>
         </div>
         <div class="menu-bottom-box3">
           <a href="./contact.html" class="btn btn-secondary-outline">報名課程</a>
@@ -50,8 +44,6 @@
       </div>
     </div>
   </div>
-
-  <script src="./js/follow-cursor.js"></script>
 </body>
 
 </html>
