--- a/work-temp.html
+++ b/work-temp.html
@@ -18,8 +18,8 @@
 <body onload="followMouse();">
   <!-- =========== Cursor =========== -->
   <div class="cursor-wrap">
-    <div class="outer1" id="ball">
-      <div class="outer2"></div>
+    <div class="cursor"></div>
+    <div class="ball" id="ball">
     </div>
   </div>
   <!-- =========== Cursor =========== -->
