--- a/works.html
+++ b/works.html
@@ -18,8 +18,8 @@
 <body onload="followMouse();" data-barba="wrapper">
   <!-- =========== Cursor =========== -->
   <div class="cursor-wrap">
-    <div class="outer1" id="ball">
-      <div class="outer2"></div>
+    <div class="cursor"></div>
+    <div class="ball" id="ball">
     </div>
   </div>
   <!-- =========== Cursor =========== -->
@@ -181,10 +181,6 @@
   <!-- FOOTER -->
 
   <script src="./js/cursor.js"></script>
-  <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-  <script src="https://unpkg.com/@barba/core"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.4/gsap.min.js"></script>
-  <script src="./js/main.js"></script>
 </body>
 
 </html>
