--- a/classes.html
+++ b/classes.html
@@ -17,8 +17,8 @@
 <body onload="followMouse();">
   <!-- =========== Cursor =========== -->
   <div class="cursor-wrap">
-    <div class="outer1" id="ball">
-      <div class="outer2"></div>
+    <div class="cursor"></div>
+    <div class="ball" id="ball">
     </div>
   </div>
   <!-- =========== Cursor =========== -->
@@ -152,7 +152,6 @@
   </footer>
   <!-- FOOTER -->
   <script src="./js/cursor.js"></script>
-  <!-- <script src="./js/horizonal-plugin.js"></script> -->
   <script src="./js/hr-scroll.js"></script>
 </body>
 
